<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_selectdate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/txt_date"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_selectdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_activities"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="17dp"
        android:text="@string/tv_select_date"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/txt_activities"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="230dp"
        android:layout_height="278dp"
        android:layout_above="@+id/tv_preview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="304dp"
            android:layout_height="118dp"
            android:gravity="center"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_blue"
                android:contentDescription="@string/description"
                android:onClick="onClick"
                app:srcCompat="@drawable/icon_static" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_orange"
                android:contentDescription="@string/description"
                android:onClick="onClick"
                app:srcCompat="@drawable/icon_jump" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_blue"
                android:contentDescription="@string/description"
                android:text="@string/noButton"
                app:srcCompat="@drawable/icon_squat" />
        </TableRow>

        <TableRow
            android:layout_width="321dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_orange"
                android:contentDescription="@string/description"
                android:onClick="onClick"
                app:srcCompat="@drawable/icon_squat" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_blue"
                android:contentDescription="@string/description"
                android:onClick="onClick"
                app:srcCompat="@drawable/icon_run" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_orange"
                android:contentDescription="@string/description"
                android:text="@string/noButton"
                app:srcCompat="@drawable/icon_run" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_blue"
                android:contentDescription="@string/description"
                android:onClick="onClick"
                app:srcCompat="@drawable/icon_run" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_orange"
                android:contentDescription="@string/description"
                android:text="@string/noButton"
                app:srcCompat="@drawable/icon_static" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="10dp"
                android:layout_height="75dp"
                android:text="@string/txt_space" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="@drawable/btn_act_blue"
                android:contentDescription="@string/description"
                android:text="@string/noButton"
                app:srcCompat="@drawable/icon_jump" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_preview"
        android:layout_width="257dp"
        android:layout_height="43dp"
        android:layout_above="@+id/tv_reps"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="23dp"
        android:hint="@string/tv_preview"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reps"
        android:layout_width="266dp"
        android:layout_height="31dp"
        android:layout_above="@+id/btn_ok"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="46dp"
        android:hint="@string/tv_reps"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginBottom="56dp"
        android:text="@string/btn_ok_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>
