<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:gravity="top"
    android:padding="32dp"
    android:orientation="vertical"
    tools:context=".BaseActivity">

    <Button
        android:id="@+id/btn_addbutton"
        android:layout_width="299dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_add"
        android:contentDescription="@string/app_name"
        android:onClick="Add_New"
        android:text="@string/btn_addbutton"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic">

    </Button>

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="768dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edt_add1"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add2"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add3"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add4"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add5"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add6"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edt_add7"
                android:layout_width="354dp"
                android:layout_height="138dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>